--- a/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
+++ b/HW_21_Autolayout_Part_2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,26 +15,26 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LayoutScreenViewController" customModule="HW_21_Autolayout_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="sG5-zJ-UeM">
-                                <rect key="frame" x="20" y="40" width="335" height="110"/>
+                                <rect key="frame" x="20" y="40" width="280" height="110"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance between views:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9d-l7-BML">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="VFN-dm-wuP">
-                                        <rect key="frame" x="-2" y="40" width="339" height="31"/>
+                                        <rect key="frame" x="-2" y="40" width="284" height="31"/>
                                         <connections>
                                             <action selector="distanceValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Gfc-zu-Egb"/>
                                         </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="75v-xk-Pz0">
-                                        <rect key="frame" x="0.0" y="80" width="335" height="30"/>
+                                        <rect key="frame" x="0.0" y="80" width="280" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Margin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YIB-6u-uvt">
                                                 <rect key="frame" x="0.0" y="0.0" width="85.5" height="30"/>
@@ -46,13 +46,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JT5-0p-uFF">
-                                                <rect key="frame" x="105.5" y="0.0" width="168.5" height="30"/>
+                                                <rect key="frame" x="105.5" y="0.0" width="113.5" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je1-dx-Y2x">
-                                                <rect key="frame" x="294" y="0.0" width="41" height="30"/>
+                                                <rect key="frame" x="239" y="0.0" width="41" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="41" id="sxi-Jw-Sk1"/>
                                                 </constraints>
@@ -66,7 +66,7 @@
                                 </subviews>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-uo-VBr" userLabel="ColorsViewsContainer">
-                                <rect key="frame" x="52.5" y="170" width="270" height="100"/>
+                                <rect key="frame" x="25" y="170" width="270" height="100"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CDC-LI-05e">
                                         <rect key="frame" x="30" y="0.0" width="80" height="100"/>
@@ -95,7 +95,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qwb-Gl-ax6">
-                                <rect key="frame" x="117.5" y="587" width="140" height="60"/>
+                                <rect key="frame" x="90" y="400" width="140" height="60"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Av2-1Y-Gbc"/>
@@ -115,6 +115,7 @@
                             <constraint firstItem="hLy-uo-VBr" firstAttribute="top" secondItem="sG5-zJ-UeM" secondAttribute="bottom" constant="20" id="1FP-Mv-gtC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="sG5-zJ-UeM" secondAttribute="trailing" constant="20" id="CwQ-Kf-EdX"/>
                             <constraint firstItem="hLy-uo-VBr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TJg-s5-bMn"/>
+                            <constraint firstItem="qwb-Gl-ax6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="hLy-uo-VBr" secondAttribute="bottom" constant="10" id="e3A-WH-T37"/>
                             <constraint firstItem="sG5-zJ-UeM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mYC-p3-hXG"/>
                             <constraint firstItem="qwb-Gl-ax6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sD7-KB-CPH"/>
                             <constraint firstItem="sG5-zJ-UeM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="ulg-fT-uIU"/>
@@ -141,11 +142,11 @@
             <objects>
                 <viewController id="s4J-JT-Jsu" customClass="ChessViewController" customModule="HW_21_Autolayout_Part_2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="n1l-5N-is9">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xug-7H-ykP">
-                                <rect key="frame" x="117.5" y="597" width="140" height="50"/>
+                                <rect key="frame" x="90" y="410" width="140" height="50"/>
                                 <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="140" id="79W-XA-A04"/>
